<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basic_settings_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kkago.frequencyrecord.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/frequencyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/frequency_Default"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ToggleButton
        android:id="@+id/recordToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textOff="@string/toggle_off"
        android:textOn="@string/toggle_on" />

    <LinearLayout
        android:id="@+id/graphViewLayout"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:orientation="vertical" >

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" >

                <TextView
                    android:id="@+id/deltaFrequencyDescView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delta_frequency_desc_view"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/deltaFrequencyDetailView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delta_frequency_detail_view" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" >

                <TextView
                    android:id="@+id/outputInfoDescView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/output_info_desc_view"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/outputInfoDetailView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/output_info_detail_view" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" >

                <TextView
                    android:id="@+id/currNoiseLevelView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/curr_noise_desc_view"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/currNoiseLevelDetailView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/curr_noise_detail_view" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" >

                <TextView
                    android:id="@+id/currThresholdView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/curr_threshold_view"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/currThresholdDetailView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/curr_threshold_detail_view" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/settings_text_button" />
        
         <Button
             android:id="@+id/filters_button"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignLeft="@id/settings_button"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="false"
             android:layout_below="@id/settings_button"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="3dp"
             android:text="@string/filters_text_button" />

    </RelativeLayout>

</LinearLayout>