<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/samplingRateTextView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/sampling_rate_view"
            android:textSize="@dimen/sampling_rate_view_font_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/frequencySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/NFFTView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/NFFT_view"
            android:textSize="@dimen/sampling_rate_view_font_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/NFFTSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <ImageView
        android:id="@+id/searchImageView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#aa000000" />
    
    <TextView
        android:id="@+id/noiseFilterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/noise_filter_view"
        android:textSize="@dimen/sampling_rate_view_font_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/filterLevelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/noise_filter_value_view"
        android:textSize="16sp" />
    
    <SeekBar
        android:id="@+id/noiseFilterSeekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:max="10" />
    
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#aa000000" />
    
    <TextView
        android:id="@+id/graphMaxTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/graph_max_value_title"
        android:textSize="@dimen/sampling_rate_view_font_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/graphMaxValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/graph_max_value_detail"
        android:textSize="16sp" />
    
    <SeekBar
        android:id="@+id/graphMaxSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:max="80" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#aa000000" />

    <Switch
        android:id="@+id/rawGraphToggleSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/raw_graph_toggle_text" />

</LinearLayout>
