<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/bandPassFilterTextView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/bandpass_filter_text"
            android:textSize="@dimen/sampling_rate_view_font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lowerBoundTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_average_filter_lower_text_view" />

            <EditText
                android:id="@+id/lowerBoundField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:gravity="center_vertical|end"
                android:inputType="numberDecimal"
                android:text="@string/lower_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/upperBoundTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_average_filter_upper_text_view" />

            <EditText
                android:id="@+id/upperBoundField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:gravity="center_vertical|end"
                android:inputType="numberDecimal"
                android:text="@string/upper_default" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#aa000000" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/pointAverageFilterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point_average_filter"
            android:textSize="@dimen/sampling_rate_view_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <Spinner
        android:id="@+id/averagePointSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>